--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: raiden-ai
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --worker-class eventlet -w 1 --bind 0.0.0.0:$PORT server:app
+    startCommand: gunicorn --worker-class gevent -w 1 --bind 0.0.0.0:$PORT server:app
     envVars:
       - key: GROQ_API_KEY
         sync: false
